--- a/Play/app/views/layouts/application.html.erb
+++ b/Play/app/views/layouts/application.html.erb
@@ -12,13 +12,13 @@
     <%= yield(:head) %>
   </head>
   <body>
-    <header class="navbar navbar-fixed-top">
+    <!--<header class="navbar navbar-fixed-top">
       <nav class="navbar-inner">
         <div class="container">
          <%- #render 'layouts/navigation' %> 
         </div>
       </nav>
-    </header>
+    </header> -->
     <div id="main" role="main">
       <div class="container">
         <div class="content">
